[project]
name = "vit"
version = "0.1.0"
description = "A CLI tool for attaching visuals to git commits."
readme = "README.md"
authors = [
    { name = "Andrew Leach" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "typer>=0.16.0",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[project.scripts]
vit = "vit.cli:app"
